# scf

./: .gitignore  pyproject.toml
scf/: phi_u_cimparision.py  scf.py
